
* LUCENE-10652: Add a top-n range faceting example to RangeFacetsExample. (Yuting Gan)

Optimizations
---------------------

* GITHUB#11857, GITHUB#11859, GITHUB#11893, GITHUB#11909: Hunspell: improved suggestion performance (Peter Gromov)

* GITHUB#12160: Concurrent rewrite for AbstractKnnVectorQuery. (Kaival Parikh)

Bug Fixes
---------------------

* LUCENE-10599: LogMergePolicy is more likely to keep merging segments until
  they reach the maximum merge size. (Adrien Grand)

* GITHUB#12220: Hunspell: disallow hidden title-case entries from compound middle/end

Other
---------------------

* LUCENE-10376: Roll up the loop in VInt/VLong in DataInput. (Guo Feng)

* LUCENE-10283: The minimum required Java version was bumped from 11 to 17.
  (Adrien Grand, Uwe Schindler, Dawid Weiss, Robert Muir)

* LUCENE-10253: The @BadApple annotation has been removed from the test
  framework. (Adrien Grand)

* LUCENE-10393: Unify binary dictionary and dictionary writer in Kuromoji and Nori.
  (Tomoko Uchida, Robert Muir)

* LUCENE-10475: Merge dictionary builders in `util` package into `dict` package in Kuromoji and Nori.
  All classes in `org.apache.lucene.analysis.[ja|ko].util` was moved to `org.apache.lucene.analysis.[ja|ko].dict`.
  (Tomoko Uchida)

* LUCENE-10493: Factor out Viterbi algorithm in Kuromoji and Nori to analysis-common. (Tomoko Uchida)

* GITHUB#977, LUCENE-9500: Remove the deflater hack introduced because of JDK-8252739 (Uwe Schindler)

* GITHUB#11960: Hunspell: supported empty dictionaries (Peter Gromov)

* GITHUB#12239: Hunspell: reduced suggestion set dependency on the hash table order (Peter Gromov)

======================== Lucene 9.7.0 =======================

API Changes
---------------------
(No changes)

New Features
---------------------
(No changes)

Improvements
---------------------
(No changes)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------
(No changes)

Other
---------------------
(No changes)
